fdo#71217 PDF Import: Fix importing of JPEG images

Change-Id: Ic0902a3f9340d2d05be05d13d98f168879b4c3e3